--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
     <main class="container my-5">
         <section class="hero text-center mb-5">
             <h2 class="display-4">Selamat Datang di TeMekanis Bengkel Alkes</h2>
-            <p class="lead">Toko terdepan untuk layanan perbaikan peralatan mekanis dan jual beli sparepart berkualitas tinggi.</p>
+            <p class="lead">Perusahaan yg berjalan di bidang jasa perbaikan alat kesehatan sekitar pulau lombok.</p>
             <a href="layanan.html" class="btn btn-primary btn-lg">Pesan Sekarang</a>
         </section>
 
@@ -219,3 +219,4 @@
     <script src="js/pwa.js"></script>
 </body>
 </html>
+
